Tsx/tests/error/visibility.parseset
# Error Tests for Visibility Specifiers
# Tests for invalid visibility specifier usage and edge cases

#! Error expression
# 1. Invalid specifier name
InvalidFunc<notvalid>():int = 42

#! Error expression
# 2. Missing opening angle bracket
MissingOpenFunc public>():int = 42

#! Error expression
# 4. Empty specifier brackets
EmptySpecFunc<>():int = 42

#! Error expression
# 5. Invalid specifier syntax with equals
WrongSyntax<public=true>():int = 42

#! Error expression
# 6. Invalid specifier with quotes
QuotedSpecifier<"public">():int = 42

#! Error expression
# 7. Invalid specifier with numbers
NumericSpecifier<public1>():int = 42

#! Error expression
# 8. Invalid nested angle brackets
NestedBrackets<<public>>():int = 42

#! Error expression
# 9. Invalid specifier with spaces
SpacedSpecifier< public >():int = 42

#! Error expression
# 10. Invalid multiple angle bracket sets without content
EmptyMultiple<><>():int = 42

#! Error expression
# 11. Invalid specifier after return type
WrongPosition():int<public> = 42

#! Error expression
# 12. Invalid specifier in parameter list
BadParam(x<public>:int):int = x

#! Error expression
# 13. Invalid specifier on parameter type
BadParamType(x:int<public>):int = x

#! Error expression
# 14. Invalid specifier mixed with operators
BadMix<public+private>():int = 42

#! Error expression
# 15. Invalid specifier with assignment operator
BadAssign<public:=private>():int = 42